--- a/Study/.settings/org.eclipse.wst.common.component
+++ b/Study/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="Study">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/res"/>
         <property name="java-output-path" value="/Study/build/classes"/>
         <property name="context-root" value="Study"/>
     </wb-module>
